made images undraggable

--- a/main.css
+++ b/main.css
@@ -52,6 +52,12 @@ img {
   min-width: 100px;
   max-width: 180px;
   margin: 10px;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .scoreboard {
